<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtering_and_sort"
            android:textSize="21sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="256dp"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"
            android:background="#ff625b71"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:textSize="21sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_view_ids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rd_view_id_items_and_blocks">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_view_id_items_and_blocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_and_item_id"
                android:textSize="18sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_view_id_effects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/effects_id"
                android:textSize="18sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_view_id_mobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobs_id"
                android:textSize="18sp" />
        </RadioGroup>

        <View
            android:layout_width="256dp"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"
            android:background="#ff625b71"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="21sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tg_btn_sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <Button
                android:id="@+id/sort_by_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                app:icon="@drawable/ic_baseline_keyboard_arrow_up_24"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/sort_by_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending"
                app:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
                style="?attr/materialButtonOutlinedStyle"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:layout_width="256dp"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"
            android:background="#ff625b71"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/apply_filters"
            style="?attr/materialButtonOutlinedStyle"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>